<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity">


    <TextView
        android:id="@+id/instr_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/inst_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instr_Label">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:id="@+id/inst_play_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inst_play_label"
                android:textSize="12pt"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/inst_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inst_play_text"
                android:textSize="8pt" />
            <TextView
                android:id="@+id/inst_options_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inst_options_label"
                android:textSize="12pt"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/inst_options_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inst_options_text"
                android:textSize="8pt" />

    </LinearLayout>
    </ScrollView>


    <!--
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inst_text" />
    </ScrollView>-->
</android.support.constraint.ConstraintLayout>